# TruAudiobook

./: .gitignore  README.md  generate_data_file.py  pyproject.toml
tru_audiobook/: __init__.py
tru_audiobook/scripts/: truaudiobook.py
